2003-04-07  ARISAWA Akihiro  <ari@namazu.org>

	* shimbun/sb-ding.el: Removed.

2003-04-05  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-anthy.el (shimbun-anthy-url): Remove slash at the end.

2003-04-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-search.el (w3m-search-engine-alist): Change coding-system to
	`euc-japan' of "waei" and "kokugo". Tnx, Mr. Saito (sai@yedo.com)
	for his report.

2003-03-30  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-canna-dev.el: New file.

2003-03-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-antenna.el (w3m-antenna-check-all-sites): Call `make-symbol'
	instead of `gensym', in order to make this function free from
	runtime CL functions.

2003-03-21  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-muchy.el (shimbun-muchy-get-headers): Bug fixed,

2003-03-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-make-contents): New function
	used to get a correct date header for the science group.
	(shimbun-make-contents): Use it.
	* shimbun/sb-asahi-html.el (shimbun-make-contents): Use it.

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-make-contents): New
	function used to get a correct date header.
	(shimbun-make-contents): Use it.
	* shimbun/sb-yomiuri-html.el (shimbun-make-contents): Use it.

	* shimbun/sb-mainichi.el (shimbun-make-contents): New function
	used to get a correct date header.

2003-03-16  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-wincefan.el (shimbun-make-contents): Remove some more
	advertisements.
	(shimbun-get-headers): Search message-id before seaching html file
	diligently.
	Fix regexp.
	Use `w3m-expand-url for URL.
	(shimbun-wincefan-from-address): Typo fixed.
	Declare with defconst.

2003-03-14  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-muchy.el (shimbun-muchy-content-start): Updated.
	(shimbun-muchy-content-end): Ditto.
	(shimbun-get-headers): Ditto.
	(shimbun-muchy-get-headers): Ditto.
	(shimbun-make-contents): Removed.